--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>
 
   <header>
-    <img src="https://media.discordapp.net/attachments/1250042447598456915/1437056224590954680/18B0F2D7-630F-49EF-9B5E-474684E00C80.jpg?ex=6911da67&is=691088e7&hm=5435637387e5e936874c73a8348fb23c13c589ba806f9847ce01f07504071cc0&=&format=webp&width=313&height=556" alt="Kathy" class="profile-pic">
+    <img src="profile.jpg" alt="Kathy" class="profile-pic">
+
     <h1>Hello, I'm Kathy</h1>
     <p>Aspiring Web Developer</p>
     
@@ -57,5 +58,6 @@
 
 </body>
 </html>
+
 
 
